# shuttle-qdrant-semantic-caching

./: Cargo.toml
src/: main.rs  qdrant.rs
